# kafka-connector2

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: tests.yml
kafka/: build.gradle
kafka-connector/: Cargo.toml
kafka-connector-jni/: Cargo.toml
kafka-connector-jni/src/: clone_from_java.rs  clone_to_from_java.rs  clone_to_java.rs  java_stored_object.rs  lib.rs
kafka-connector-jni/src/clients/consumer/: consumer_record.rs
kafka-connector-jni/src/common/: metric_name.rs  metric_name_template.rs  mod.rs
kafka-connector-jni/src/common/header/internals/: mod.rs  record_header.rs  record_headers.rs
kafka-connector-jni/src/common/metrics/: measurable.rs  metric_config.rs  mod.rs  named_measurable.rs  quota.rs  sensor.rs  sensor_recording_level.rs
kafka-connector-jni/src/common/metrics/internals/: metric_utils.rs  mod.rs
kafka-connector-jni/src/common/metrics/stats/: cumulative_stat.rs  frequency.rs  histogram.rs  mod.rs  percentile.rs  rate.rs  sample.rs  sampled_stat.rs  token_bucket.rs  value.rs
kafka-connector-jni/src/common/record/: mod.rs  timestamp_type.rs
kafka-connector-jni/src/consumer/: consumer_record.rs  mod.rs
kafka-connector-macros/: Cargo.toml
kafka-connector-macros/src/: java_enum.rs  java_property_getter.rs  lib.rs  phase_1.rs  rust_property_chain_setter.rs  rust_property_getter.rs  utils.rs
kafka-connector/examples/: producer.rs
kafka-connector/src/: lib.rs
kafka-connector/src/consumer/: mod.rs
kafka-connector/src/producer/: mod.rs
kafka-connector/src/utils/: mod.rs
kafka/checkstyle/: checkstyle.xml  import-control.xml
(+133 files in other folders)
