[package]
authors = ["kononnable <kononnable@gmail.com>"]
edition = "2021"
name = "kafka-connector-jni"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
bytes = "1.0.1"
jni = "0.19.0"
kafka-connector-macros = {version = "0.1.0", path = "./../kafka-connector-macros"}
