[package]
authors = ["kononnable <kononnable@gmail.com>"]
description = "Rust client for Apache Kafka"
edition = "2021"
keywords = ["kafka"]
license = "MIT OR Apache-2.0"
name = "kafka-connector-jni"
repository = "https://github.com/Kononnable/kafka-connector2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
bytes = "1.0.1"
jni = "0.19.0"
kafka-connector-macros = {version = "0.1.0", path = "./../kafka-connector-macros"}
