[package]
authors = ["kononnable <kononnable@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "kafka-connector-macros"
repository = "https://github.com/Kononnable/kafka-connector2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4.0"
proc-macro2 = "1.0.30"
quote = "1.0"
syn = {version = "1.0", features = ["full", "parsing", "visit-mut", "derive", "extra-traits"]}
